# FastApi-Study

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  check_progress.py  docker-compose.yml  progress.json  pyproject.toml  verify-deploy.sh
.goal/: config.yml
.trae/rules/: git-commit-message.md
app/: data.py  main.py  test.py
app/api/: __init__.py  admin.py  auth.py  versioned.py  ws_comments.py
app/core/: __init__.py  config.py  deps.py  exceptions.py  middleware.py  security.py  ws_manager.py
app/crud/: __init__.py  authors.py
app/db/: __init__.py  base.py  init_startup.py
app/models/: __init__.py
app/schemas/: __init__.py  author.py  enums.py  post.py  types.py
app/services/: __init__.py  cache.py  email.py  external.py  hot_posts.py  scheduler.py  stats.py  upload.py
blog-api-control-panel/: blog-api-control-panel.design  colors_and_type.css  orchestration-summary.json
blog-api-control-panel/pages/: dashboard-overview.html
docs/lessons/: 01-hello.md  02-params.md  03-body.md  04-form-file.md  05-response.md  06-dependencies.md  07-pydantic-advanced.md  08-async.md  09-middleware.md  10-exceptions.md  (+10 more)
tests/: conftest.py  test_01_hello.py  test_02_params.py  test_03_body.py  test_04_form_file.py  test_05_response.py  test_06_dependencies.py  test_07_pydantic.py  test_08_async.py  test_09_middleware.py  test_10_exceptions.py  test_11_database.py  test_12_auth.py  test_13_background.py  test_14_websocket.py  test_15_openapi.py  test_16_blog_fixtures.py  test_17_structure.py  test_18_cache.py  test_19_deploy.py  test_20_blog_e2e.py
(+22 files in other folders)
